# 3D-Renderer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: README.md
old/: main.cpp
old/pipeline/: Camera.h  Scene.cpp  Scene.h
old/pipeline/object/: Concrete_Object_Impl.h  Object.h
old/pipeline/vertex/: SimpleVertex.cpp
pipeline/: Camera.cpp  Camera.h  Pipeline.cpp  Pipeline.h  Scene.h
pipeline/object/: Concrete_Object_Impl.h  Object.cpp  Object.h  Object_Impl.h
pipeline/util/: Vector3.cpp  Vector3.h
pipeline/vertex/: SimpleVertex.cpp  SimpleVertex.h
report/: Report.md
src/: main.cpp
src/main/: SampleScene.cpp  SampleScene.h  SceneBuilder.cpp  SceneBuilder.h  Shaders.cpp  Shaders.h  SimpleMesh.cpp  SimpleMesh.h  TextureShader.h  TriangleIterator.cpp  TriangleIterator.h  main.cpp  main_gui.cpp
src/pipeline/: Camera.cpp  Camera.h  DedicatedPipeline.cpp  DedicatedPipeline.h  DedicatedPipelineImpl.cpp  DedicatedPipelineImpl.h  Pipeline.cpp  Pipeline.h  Scene.cpp  Scene.h
src/pipeline/object/: Object.cpp  Object.h  ObjectInfo.cpp  ObjectInfo.h
src/pipeline/util/: BoundingSphere.h  ChronoMeter.cpp  ChronoMeter.h  Vector3.h  bounding_sphere.h
src/pipeline/vertex/: SimpleVertex.cpp  SimpleVertex.h  TextureVertex.cpp  TextureVertex.h
